--- a/Car-Boutique-Liera/about-us/about-us.html
+++ b/Car-Boutique-Liera/about-us/about-us.html
@@ -2,24 +2,22 @@
 <html>
   <head>
     <title>About Us</title>
-    <link rel="stylesheet" href="/Car-Boutique-Liera/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="aboutUs">
       <div class="nav-bar-about">
         <div>Car Boutique and More Liera</div>
         <ul>
-          <li><a href="/Car-Boutique-Liera/index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">About Us</a>
           </li>
           <li>
-            <a href="/Car-Boutique-Liera/services/services.html">Services</a>
+            <a href="../services/services.html">Services</a>
           </li>
           <li>
-            <a href="/Car-Boutique-Liera/contact-us/contact-us.html"
-              >Contact Us</a
-            >
+            <a href="../contact-us/contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
