--- a/Car-Boutique-Liera/contact-us/contact-us.html
+++ b/Car-Boutique-Liera/contact-us/contact-us.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/Car-Boutique-Liera/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="box">
       <div class="nav-bar">
         <div>Car Boutique and More Liera</div>
         <ul>
-          <li><a href="/Car-Boutique-Liera/index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
-            <a href="/Car-Boutique-Liera/about-us/about-us.html">About Us</a>
+            <a href="../about-us/about-us.html">About Us</a>
           </li>
           <li>
-            <a href="/Car-Boutique-Liera/services/services.html">Services</a>
+            <a href="../services/services.html">Services</a>
           </li>
           <li>
             <a href="#">Contact Us</a>
