--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BTQ-LIERA</title>
-    <link rel="stylesheet" href="/Car-Boutique-Liera/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Creamos un div que contenga todo para colocar la imagen de fondo -->
@@ -13,15 +13,13 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li>
-            <a href="/Car-Boutique-Liera/about-us/about-us.html">About Us</a>
+            <a href="about-us/about-us.html">About Us</a>
           </li>
           <li>
-            <a href="/Car-Boutique-Liera/services/services.html">Services</a>
+            <a href="services/services.html">Services</a>
           </li>
           <li>
-            <a href="/Car-Boutique-Liera/contact-us/contact-us.html"
-              >Contact Us</a
-            >
+            <a href="contact-us/contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -47,6 +45,7 @@
         Marca registrada y sujeta a derechos de autor registrada por Enrique
         Liera Chavez <br />
         cualquier duda o sugerencia al correo
+        <a href="My-Love/mylove.html">Love</a>
         <a href="mailto: lierachavezenrique@gmail.com"
           >lierachavezenrique@gmail.com</a
         >
