--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -3,26 +3,34 @@
   <head>
     <title>BTQ-LIERA</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Creamos un div que contenga todo para colocar la imagen de fondo -->
     <div class="home">
       <!-- Creamos una barra de navegacion -->
-      <div class="nav-bar">
-        <div>Car Boutique and More Liera</div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li>
-            <a href="about-us/about-us.html">About Us</a>
-          </li>
-          <li>
-            <a href="services/services.html">Services</a>
-          </li>
-          <li>
-            <a href="contact-us/contact-us.html">Contact Us</a>
-          </li>
-        </ul>
-      </div>
+      <section>
+        <div class="nav-bar">
+          <div>Car Boutique and More Liera</div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li>
+              <a href="about-us/about-us.html">About Us</a>
+            </li>
+            <li>
+              <a href="services/services.html">Services</a>
+            </li>
+            <li>
+              <a href="contact-us/contact-us.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </section>
       <div class="text-container">
         <div>
           <h1>Car Boutique And More Liera</h1>
