--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <!-- Creamos un div que contenga todo para colocar la imagen de fondo -->
+    <!-- Creamos para un div que contenga todo para colocar la imagen de fondo -->
     <div class="home">
       <!-- Creamos una barra de navegacion -->
       <section>
