--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>BTQ-LIERA</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Creamos un div que contenga todo para colocar la imagen de fondo -->
