--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BTQ-LIERA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,21 +41,25 @@
         </div>
       </div>
     </div>
-    <div class="feed">
-      <div id="marca">BQT Liera MR</div>
-      <div class="social">
-        <div id="priv"><a href="">Aviso de privacidad</a></div>
-        <div id="fb"><a href="">FACEBOOK</a></div>
-        <div id="ig"><a href="">INSTAGRAM</a></div>
-      </div>
-      <div id="aviso">
-        Marca registrada y sujeta a derechos de autor registrada por Enrique
-        Liera Chavez <br />
-        cualquier duda o sugerencia al correo
-        <a href="My-Love/mylove.html">Love</a>
-        <a href="mailto: lierachavezenrique@gmail.com"
-          >lierachavezenrique@gmail.com</a
-        >
+    <div class="feedcontainer">
+      <div class="feed">
+        <div id="marca">BQT Liera MR</div>
+        <div id="social">
+          <div id="priv"><a href="">Aviso de privacidad</a></div>
+          <br />
+          <div id="fb"><a href="">FACEBOOK</a></div>
+          <br />
+          <div id="ig"><a href="">INSTAGRAM</a></div>
+        </div>
+        <div id="aviso">
+          Marca registrada y sujeta a derechos de autor registrada por Enrique
+          Liera Chavez <br />
+          cualquier duda o sugerencia al correo
+          <a href="mailto: lierachavezenrique@gmail.com"
+            >lierachavezenrique@gmail.com</a
+          >
+          <a href="My-Love/mylove.html">.</a>
+        </div>
       </div>
     </div>
   </body>
