--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -47,9 +47,9 @@
         <div id="social">
           <div id="priv"><a href="">Aviso de privacidad</a></div>
           <br />
-          <div id="fb"><a href="">FACEBOOK</a></div>
+          <!-- <div id="fb"><a href="">FACEBOOK</a></div> -->
           <br />
-          <div id="ig"><a href="">INSTAGRAM</a></div>
+          <!-- <div id="ig"><a href="">INSTAGRAM</a></div> -->
         </div>
         <div id="aviso">
           Marca registrada y sujeta a derechos de autor registrada por Enrique
