--- a/Car-Boutique-Liera/about-us/about-us.html
+++ b/Car-Boutique-Liera/about-us/about-us.html
@@ -2,6 +2,24 @@
 <html>
   <head>
     <title>About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=7" />
+    <meta
+      name="description"
+      content="This is a page for information to our services, the engine for all of this are in Morelia,Michoacan,Mexico."
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="keywords"
+      content="Autos,Hojalateria y pintura, Estetica automotriz,Detallado automotriz"
+    />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
