--- a/Car-Boutique-Liera/about-us/about-us.html
+++ b/Car-Boutique-Liera/about-us/about-us.html
@@ -49,18 +49,20 @@
         </p>
       </div>
     </div>
-    <div class="feed">
-      <div id="marca">BQT Liera MR</div>
-      <div class="social">
-        <div id="priv"><a href="">Aviso de privacidad</a></div>
-        <div id="fb"><a href="">FACEBOOK</a></div>
-        <div id="ig"><a href="">INSTAGRAM</a></div>
-      </div>
-      <div id="aviso">
-        Marca registrada y sujeta a derechos de autor registrada por Enrique
-        Liera Chavez <br />
-        cualquier duda o sugerencia al correo
-        <a href="">lierachavezenrique@gmail.com</a>
+    <div class="feedcontainer">
+      <div class="feed">
+        <div class="marca">BQT Liera MR</div>
+        <div class="social">
+          <div id="priv"><a href="">Aviso de privacidad</a></div>
+          <div id="fb"><a href="">FACEBOOK</a></div>
+          <div id="ig"><a href="">INSTAGRAM</a></div>
+        </div>
+        <div class="aviso">
+          Marca registrada y sujeta a derechos de autor registrada por Enrique
+          Liera Chavez <br />
+          cualquier duda o sugerencia al correo
+          <a href="">lierachavezenrique@gmail.com</a>
+        </div>
       </div>
     </div>
   </body>
