--- a/Car-Boutique-Liera/index.html
+++ b/Car-Boutique-Liera/index.html
@@ -54,15 +54,15 @@
     </div>
     <div class="feedcontainer">
       <div class="feed">
-        <div id="marca">BQT Liera MR</div>
-        <div id="social">
-          <div id="priv"><a href="">Aviso de privacidad</a></div>
+        <div class="marca">BQT Liera MR</div>
+        <div class="social">
+          <div class="priv"><a href="">Aviso de privacidad</a></div>
           <br />
           <!-- <div id="fb"><a href="">FACEBOOK</a></div> -->
           <br />
           <!-- <div id="ig"><a href="">INSTAGRAM</a></div> -->
         </div>
-        <div id="aviso">
+        <div class="aviso">
           Marca registrada y sujeta a derechos de autor registrada por Enrique
           Liera Chavez <br />
           cualquier duda o sugerencia al correo
