--- a/Car-Boutique-Liera/services/services.html
+++ b/Car-Boutique-Liera/services/services.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body class="box">
+  <body class="boxS">
     <div class="services">
       <div class="nav-bar">
         <div>Car Boutique and More Liera</div>
