--- a/Car-Boutique-Liera/contact-us/contact-us.html
+++ b/Car-Boutique-Liera/contact-us/contact-us.html
@@ -49,10 +49,21 @@
           </p>
           <h3>4431265894</h3>
           <h3>
-            For futher enquiries write to us at:
-            <a href="mailto: btqCarandMoreLiera@gmail.com"
-              >btqCarandMoreLiera@gmail.com</a
-            >
+            For futher enquiries share your email and a comment here:
+            <form class="email-container">
+              <div>
+                <label for="EmailContact">Email:</label>
+                <input type="email" name="EmailC" id="EmailContact" />
+              </div>
+              <div id="Comments">
+                <label for="TextContact">Comments:</label>
+                <input type="text" name="TextC" id="TextContact" />
+              </div>
+              <section class="email-button">
+                <button type="reset">Reset</button>
+                <button type="submit">Submit</button>
+              </section>
+            </form>
           </h3>
         </div>
       </div>
