--- a/Car-Boutique-Liera/contact-us/contact-us.html
+++ b/Car-Boutique-Liera/contact-us/contact-us.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <script defer src="../script.js"></script>
   </head>
   <body>
     <div class="box">
@@ -53,15 +54,15 @@
             <form class="email-container">
               <div>
                 <label for="EmailContact">Email:</label>
-                <input type="email" name="EmailC" id="EmailContact" />
+                <input type="email" name="emailC" id="EmailContact" />
               </div>
               <div id="Comments">
                 <label for="TextContact">Comments:</label>
-                <input type="text" name="TextC" id="TextContact" />
+                <input type="text" name="textC" id="TextContact" />
               </div>
               <section class="email-button">
                 <button type="reset">Reset</button>
-                <button type="submit">Submit</button>
+                <button type="button" id="submit">Submit</button>
               </section>
             </form>
           </h3>
